@@ -3,4 +3,5 @@
 # The order of lines is important; see net.grinder.scriptengine.ScriptEngine.
 
 net.grinder.scriptengine.jython.JythonScriptEngineService
+net.grinder.scriptengine.clojure.ClojureScriptEngineService
 net.grinder.scriptengine.java.JavaScriptEngineService
